# MiroFish-V2

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: hindsight_client.py  ingham_client.py
backend/app/db/: database.py
backend/app/services/: agent_manager.py  document_parser.py  graph_extractor.py  orchestrator.py  simulation_runner.py  web_search.py
frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalyticsDashboard.tsx  CreateSimForm.tsx  DiagnosticSurvey.tsx  KnowledgeGraph.tsx  LiveFeed.tsx  ReportViewer.tsx  SimControls.tsx
frontend/src/lib/: api.ts
